--- a/app/views/products/_product.html.erb
+++ b/app/views/products/_product.html.erb
@@ -1,12 +1,15 @@
-<% @products.each do |product| %>
+<div class = "container">
   <div class="row">
-    <div class="col-xs-12 col-sm-6 products">
+  <% @products.each do |product| %>
+  <% cache product do %>
+  
+    <div class="col-md-4 col-sm-6 col-xs-12">
       <%= image_tag(product.image_url, class: "img-responsive") %>
     </div>  
-    <div class="col-xs-12 col-sm-6 products">
+   <div class="col-md-4 col-sm-6 col-xs-12">
       <span class = "product_name"> <%= product.name %> </span> <br>
       <%= product.description %> <br>
-      $<%= product.price %> <br>
+      <%= product.price %> <br>
       
       <%= link_to 'Edit', edit_product_path(product) %>
       <%= link_to 'Show', product %>
