--- a/app/views/products/_product.html.erb
+++ b/app/views/products/_product.html.erb
@@ -1,19 +1,31 @@
-<div class = "container">
+<div class="container">
   <div class="row">
-  <% @products.each do |product| %>
-  <% cache product do %>
-  
-    <div class="col-md-4 col-sm-6 col-xs-12">
-      <%= image_tag(product.image_url, class: "img-responsive") %>
-    </div>  
-   <div class="col-md-4 col-sm-6 col-xs-12">
-      <span class = "product_name"> <%= product.name %> </span> <br>
-      <%= product.description %> <br>
-      <%= product.price %> <br>
-      
-      <%= link_to 'Edit', edit_product_path(product) %>
-      <%= link_to 'Show', product %>
-      <%= link_to 'Destroy', product, method: :delete, data: { confirm: 'Are you sure?' } %>
-    </div>
+    <% @products.each do |product| %>
+    <% cache product do %>
+
+      <div class="col-md-4 col-sm-6 col-xs-12">
+        <h3><%= product.name %></h3>
+         <%= if(product.image_url != nil && product.image_url != "" )
+            link_to(image_tag(product.image_url, class: "img-responsive product-image"), product)
+          else
+            "No image."
+          end %>
+        <p><%= product.description %><br>
+        <%= product.price %><br></p>
+        <%= link_to 'Show', product, class:'btn btn-default'%>
+        <p><% if signed_in? && current_user.admin? %>
+           <%= link_to 'Edit', edit_product_path(product) %>
+        <% end %>
+        <% if signed_in? && current_user.admin? %>
+          <%= link_to 'Destroy', product, method: :delete, data: { confirm: 'Are you sure?' } %>
+        <% end %>
+        </p>
+      </div><!-- /col -->
+    <% end %>
+    <% end %>
   </div>
-<% end %> 
+
+        <% if signed_in? && current_user.admin? %>
+           <h3><%= link_to 'Creat new product', new_product_path %></h3>
+        <% end %>
+</div>
