--- a/app/views/static_pages/landing_page.html.erb
+++ b/app/views/static_pages/landing_page.html.erb
@@ -1,7 +1,7 @@
 <!-- carousel -->
     <div class="container-fluid fill">
        <div class="pad-top">
-      <h2>NYC's #1 Source for Fixed Gears</h2>
+      <h2>New York's #1 Source for Fixed Gears</h2>
     </div>
       <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
 
