--- a/app/views/static_pages/landing_page.html.erb
+++ b/app/views/static_pages/landing_page.html.erb
@@ -1,3 +1,21 @@
+<table>
+
+ <div class="pad-top color-bg">
+	<h3>Welcome to Gearhead Social</h3>
+</div>
+<%#p>Welcome! The date and time is <%= Time.now %>
+
+<div class="pad-top color-bg">
+	<h3>For fixed gear lovers</h3>
+</div>
+<div class="pad-bottom color-bg">
+<%= image_tag("bikelogo.png", class: "img-responsive my-image") %>
+</div>
+
+<%= render partial: 'carousel' %>
+
+
+</table>
 <!-- carousel -->
     <div class="container-fluid fill">
        <div class="pad-top">
