--- a/app/views/static_pages/landing_page.html.erb
+++ b/app/views/static_pages/landing_page.html.erb
@@ -16,48 +16,6 @@
 
 
 </table>
-<!-- carousel -->
-    <div class="container-fluid fill">
-       <div class="pad-top">
-      <h2>New York's #1 Source for Fixed Gears</h2>
-    </div>
-      <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
-
-        <!-- Indicators -->
-
-        <ol class="carousel-indicators hidden-xs">
-          <% @products.each_with_index do |product, index| %>
-          <li data-target="#carousel-example-generic" data-slide-to="<%=index%>" class=<%= " active" if index == 0 %>></li>
-          <% end %>
-        </ol>
-        <!-- Wrapper for slides -->
-
-        <div class="carousel-inner" role="listbox">
-        <% @products.each do |product| %>
-          <div class="item<%= " active" if product == @products.first %>">
-          <div class='inner-item img-responsive img-fluid'>
-          <%= image_tag(product.image_url) %>
-            </div>
-            <div class="carousel-caption">
-              <h3><%= product.name %>
-              </h3>
-            </div>
-          </div>
-          <% end %>
-        </div>
-        <!-- Controls -->
-        <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
-          <span class="glyphicon glyphicon-chevron-left">
-          </span>
-          <span class="sr-only">Previous
-          </span>
-        </a>
-        <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
-          <span class="glyphicon glyphicon-chevron-right">
-          </span>
-          <span class="sr-only">Next
-          </span>
-        </a>
-      </div>
-    </div> 
-    <!--end carousel-->
+<%# test_variable = 42 %>
+<%#= test_variable %>
+<%#= test_variable - 2 %>
