--- a/app/assets/stylesheets/products.scss
+++ b/app/assets/stylesheets/products.scss
@@ -1,258 +1,92 @@
 
 // Place all the styles related to the products controller here.
-* {
-    box-sizing: border-box
+
+.product-show-wrapper {
+  background-color: white;
+  border: 2px solid #ececec;
+  box-shadow: 4px 4px 7px 0px #dddddd;
+  padding: 20px;
 }
-body,
-html {
-    height: 100%
+
+.product-box {
+  padding: 5px;
 }
-body {
-    font-size: 10px;
-    font-family: 'Raleway', sans-serif;
-    padding: 0;
-    margin: 0;
-    padding-top: 79px;
-    position: relative;
+
+.product-description {
+  color: black;
+  padding: 10px;
+  font-family: 'Archivo Narrow', serif;
+  font-style: bold;
+  min-height: 180px;
 }
-.container {
-    width: 80%;
-    margin: none;
-    padding: 8em 0
+
+.product-color {
+  font-family: 'Archivo Narrow', serif;
+  font-style: italic;
+  font-size: 1.8em;
+  padding: 10px;
 }
-.container-fluid {
-    width: 80%;
-    margin: none;
+
+.product-image img{
+  max-height: 400px;
 }
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-    margin-top: 0;
-    margin-bottom: 0
+
+
+
+.product-item {
+  min-height: 800px;
+  background-color: #fff;
+  border: 2px solid #ececec;
+  box-shadow: 4px 4px 7px 0px #dddddd;
+  margin: 5px;
+  padding: 10px;
 }
-h2 {
-    font-size: 4em;
-    font-weight: 700;
-    text-align: center;
+
+.product-name {
+  font-weight: bold;
+  color: #58e3b5;
+  font-family: 'Oleo Script', sans-serif;
+  font-size: 3em;
+  min-height: 100px;
 }
-h3 {
-    font-size: 2.5em;
-    font-weight: 200;
-    text-transform: uppercase;
-    text-align: center;
+
+.product-price {
+  text-align: center;
+  color: #ffc9c9;
+  font-size: 3em;
+  font-family: 'Oleo Script', sans-serif;
 }
-h4 {
-    font-size: 1em;
-    font-weight: 700;
-    line-height: 30px;
-    text-align: center
+
+.edit-product {
+  margin: 20px 0 0 0;
+  font-size: 1em;
+  text-align: center;
 }
-p {
-    font-size: 1.5em;
-    font-family: 'Raleway', sans-serif;
-    font-weight: 200;
-    line-height: 30px;
-    text-align: center
+
+.edit-window {
+  background-color: #e7e7e7;
+  border: 1px solid #dddddd;
+  padding: 10px;
+  width: 795px;
 }
-h1 {
-    font-weight: 700;
-    font-size: 4em;
-    font-family: 'Open Sans', sans-serif;
-    text-align: center;
+
+.review-container {
+  display: none;
 }
-.form-group {
-    font-size: 1em;
-    padding-top: 1em;
-    text-align: center
+
+h4 a {
+  color: blue;
 }
-.pad-top {
-    padding-top: 4em
+
+h4 a:hover {
+  background-color: white;
+  color: blue;
 }
-.pad-bottom {
-    padding-bottom: 4em
+
+.product-reviews {
+  padding: 20px;
 }
-.pad-top-double {
-    padding-top: 8em
+
+.product-name a:hover {
+  text-decoration: none; 
 }
-.pad-bottom-double {
-    padding-bottom: 8em
-}
-.my-image {
-    display: block;
-    margin: auto;
-    position: relative
-}
-.product-image {
-    width: 150px;
-    position: relative;
-    margin: auto;
-}
-.pagination {
-    text-align: center;
-    padding: 0.3em;
-    cursor: default;
-}
-.pagination a,
-.pagination span,
-.pagination em {
-    padding: 0.2em 0.5em;
-}
-.pagination .disabled {
-    color: #aaaaaa;
-}
-.pagination .current {
-    font-style: normal;
-    font-weight: bold;
-    color: #ff0084;
-}
-.pagination a {
-    border: 1px solid #dddddd;
-    color: #B40431;
-    text-decoration: none;
-}
-.pagination a:hover,
-.pagination a:focus {
-    border-color: #B40431;
-    background: #B40431;
-    color: white;
-}
-.pagination .page_info {
-    color: #aaaaaa;
-    padding-top: 0.8em;
-}
-.pagination .previous_page,
-.pagination .next_page {
-    border-width: 2px;
-}
-.pagination .previous_page {
-    margin-right: 1em;
-}
-.pagination .next_page {
-    margin-left: 1em;
-}
-.glyphicon {
-    font-size: 0.5em;
-    text-align: center;
-    display: inline
-}
-.pagination a {
-    border: 0px
-}
-.row {
-    text-align: center
-}
-.text-muted {
-    margin: 0 0 0 20px;
-}
-a:visited {
-    color: #fff;
-}
-a:hover {
-    background-color: #fff;
-}
-.comments {
-    width: 100%;
-    background-color: #f5f5f5;
-}
-@media (min-width: 768px) and (max-width: 979px) {
-    body,
-    p {
-        text-align: center
-    }
-    h2 {
-        padding-top: 20px;
-        text-align: center
-    }
-    .header-caption {
-        top: 30%
-    }
-    .carousel-indicators {
-        top: 50%
-    }
-    .carousel-caption {
-        top: 40%
-    }
-    .inner-item img {
-        max-width: 150px;
-    }
-}
-@media (max-width: 767px) {
-    body,
-    h3,
-    p {
-        text-align: center
-    }
-    h2 {
-        padding-top: 20px;
-        text-align: center
-    }
-    h1 {
-        padding-top: 20px
-    }
-    .container {
-        width: 80%
-    }
-    #contact {
-        padding-right: 10%;
-        padding-left: 10%
-    }
-    .header-caption {
-        top: 30%;
-        font-size: 62.5%
-    }
-    .inner-item img {
-        max-width: 150px;
-    }
-    .carousel-caption {
-        top: 30%;
-    }
-}
-@media (max-width: 480px) {
-    body,
-    h3,
-    p {
-        text-align: center
-    }
-    h2 {
-        padding-top: 20px;
-        text-align: center
-    }
-    .container {
-        width: 90%
-    }
-    #contact {
-        padding-right: 5%;
-        padding-left: 5%
-    }
-    .header-caption {
-        top: 30%
-    }
-    .header-caption h2 {
-        font-weight: 800;
-        text-transform: uppercase
-    }
-    .carousel-caption {
-        top: 60%;
-    }
-    .about {
-        text-align: center;
-    }
-    #copywright {
-        width: 100%;
-        text-align: center
-    }
-    #fb-button {
-        width: 50%;
-        float: left
-    }
-    #twitter-button {
-        ;
-        float: right;
-        width: 50%;
-    }
-    .inner-item img {
-        width: 80%;
-    }
