--- a/app/views/products/_product.html.erb
+++ b/app/views/products/_product.html.erb
@@ -1,10 +1,12 @@
 <% cache product do %>
-<div class="col-xs-12 col-sm-6 col-md-3">
-  <div class="product-item"> 
-    <h3 class="product-name"><%= link_to product.name, product %><h3>
-    <%= link_to(image_tag(product.image_url, class: "img-circle img-responsive"), product) %>
-    <h3 class="product-description"><%= truncate(product.description, length: 150) %></h3>
-      <hr>
+<div class="row"> 
+  <div class="col-md-3 col-md-3 col-md-3">
+    <div class="product-item"> 
+      <h3 class="product-name"><%= link_to product.name, product %><h3>
+      <%= link_to(image_tag(product.image_url, class: "img-circle img-responsive"), product) %>
+      <h3 class="product-description"><%= truncate(product.description, length: 150) %></h3>
+        <hr>
+ </div>     
       
     <div class="product-price"><%= product.price %></div>
     <div class="col-xs-12 edit-product">
