--- a/app/views/products/_product.html.erb
+++ b/app/views/products/_product.html.erb
@@ -1,5 +1,5 @@
 <% cache product do %>
-  <div class="col-md-8 col-md-4 col-md-3">
+ <div class="col-xs-12 col-sm-6 col-md-3">
     <div class="product-item"> 
       <h3 class="product-name"><%= link_to product.name, product %><h3>
       <%= link_to(image_tag(product.image_url, class: "img-circle img-responsive"), product) %>
