--- a/app/views/products/_product.html.erb
+++ b/app/views/products/_product.html.erb
@@ -1,6 +1,6 @@
 
 <% cache product do %>
-<div class="col-xs-12 col-sm-6 col-md-3">
+<div class="col-md-4 col-sm-6 col-xs-12">
   <div class="product-item"> 
     <h3 class="product-name"><%= link_to product.name, product %><h3>
     <%= link_to(image_tag(product.image_url, class: "img-circle img-responsive"), product) %>
@@ -8,7 +8,7 @@
       
     <hr>
       
-    <h3 class="product-price"><%= product.price %></h3>
+    <h4 class="product-price"><%= product.price %></h4>
     <div class="col-xs-12 edit-product">
       <% if user_signed_in? && current_user.admin? %>
         <%= link_to 'Show', product %>
