--- a/app/views/static_pages/_carousel.html.erb
+++ b/app/views/static_pages/_carousel.html.erb
@@ -1,45 +1,35 @@
- <!-- carousel -->
-    <div class="container-fluid fill">
-       <div class="pad-top">
-      <h2>Products</h2>
-    </div>
-      <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
 
-        <!-- Indicators -->
+<div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
+  <!-- Indicators -->
+  <ol class="carousel-indicators">
+  <% cache @product do %>
+    <% @products.each_with_index do |product, i| %>
+      <li data-target="#carousel-example-generic" data-slide-to="<%=i%>" class="<%= " active" if product == @products.first %>"></li>
+    <% end %>
+  </ol>
 
-        <ol class="carousel-indicators hidden-xs">
-          <% @products.each_with_index do |product, index| %>
-          <li data-target="#carousel-example-generic" data-slide-to="<%=index%>" class=<%= " active" if index == 0 %>></li>
-          <% end %>
-        </ol>
-        <!-- Wrapper for slides -->
-
-        <div class="carousel-inner" role="listbox">
-        <% @products.each do |product| %>
-          <div class="item<%= " active" if product == @products.first %>">
-          <div class='inner-item img-responsive img-fluid'>
-          <%= image_tag(product.image_url) %>
-            </div>
-            <div class="carousel-caption">
-              <h3><%= product.name %>
-              </h3>
-            </div>
-          </div>
-          <% end %>
-        </div>
-        <!-- Controls -->
-        <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
-          <span class="glyphicon glyphicon-chevron-left">
-          </span>
-          <span class="sr-only">Previous
-          </span>
-        </a>
-        <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
-          <span class="glyphicon glyphicon-chevron-right">
-          </span>
-          <span class="sr-only">Next
-          </span>
-        </a>
+  <!-- Wrapper for slides -->
+  <div class="carousel-inner custom-carousel" role="listbox">
+    <% @products.each do |product| %>
+    <div class="item<%= " active" if product == @products.first %>">
+      <% if product.image_url.present? %>
+        <%= link_to image_tag(product.image_url, class: "d-block custom-carousel-img"), product %>
+      <% end %>
+      <div class="carousel-caption">
+        <p class="product-carousel-name"><%= product.name %></p>
       </div>
-    </div> 
-    <!--end carousel-->
+    </div>
+    <% end %>
+  <% end %>
+  </div>
+
+  <!-- Controls -->
+  <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
+    <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+    <span class="sr-only">Previous</span>
+  </a>
+  <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
+    <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+    <span class="sr-only">Next</span>
+  </a>
+</div>
