--- a/app/views/static_pages/_carousel.html.erb
+++ b/app/views/static_pages/_carousel.html.erb
@@ -1,26 +1,25 @@
+ <h2>Featured Products</h2>
 
 <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
   <!-- Indicators -->
   <ol class="carousel-indicators">
-  <% cache @product do %>
-    <% @products.each_with_index do |product, i| %>
-      <li data-target="#carousel-example-generic" data-slide-to="<%=i%>" class="<%= " active" if product == @products.first %>"></li>
+    <% @products.each do |product| %>
+    <li data-target="#carousel-example-generic" data-slide-to="<% @products.find_index %>" class="<%= "active" if product == @products.first %>"></li>
     <% end %>
   </ol>
 
   <!-- Wrapper for slides -->
-  <div class="carousel-inner custom-carousel" role="listbox">
+  <div class="carousel-inner" role="listbox">
     <% @products.each do |product| %>
-    <div class="item<%= " active" if product == @products.first %>">
-      <% if product.image_url.present? %>
-        <%= link_to image_tag(product.image_url, class: "d-block custom-carousel-img"), product %>
-      <% end %>
-      <div class="carousel-caption">
-        <p class="product-carousel-name"><%= product.name %></p>
-      </div>
-    </div>
+      <div class="item<%= " active" if product == @products.first %>">
+        <% unless product.image_url.blank? %>
+          <%= image_tag(product.image_url, class: "img-responsive carousel-image") %>
+        <% end %>
+        <div class="carousel-caption">
+            <%= link_to product.name, product %>
+        </div>
+      </div> <!--end item--> 
     <% end %>
-  <% end %>
   </div>
 
   <!-- Controls -->
@@ -32,4 +31,5 @@
     <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
     <span class="sr-only">Next</span>
   </a>
+
 </div>
